# cpp-gl

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  edge.hpp  edges.hpp  format.sh  graph.hpp  reference_test.cpp  utility.hpp  vertex.hpp  vertices.hpp
.github/workflows/: clang.yaml  format.yaml  gpp.yaml  licence.yaml
benchmark/: CMakeLists.txt
benchmark/data/: is_bipartite.csv  is_bipartite_optional_callback.csv  is_bipartite_queue.csv  is_bipartite_queue_opt.csv  is_bipartite_tmpl_callback.csv  is_bipartite_vector_queue.csv  is_bipartite_vector_queue_opt.csv
benchmark/include/: clock.hpp  numeric_format.hpp
benchmark/source/: is_bipartite.cpp
cmake/: cpp-gl-config.cmake.in
docs/: additional_functionality.md  algoithms.md  core_util_types.md  dev_notes.md  graph.md  graph_elements.md  io.md  topologies.md
edge/: edge.hpp  edge_descriptor.hpp  edge_traits.hpp  flow_edge.hpp  type_traits.hpp  types.hpp  weighted_edge.hpp  weighted_flow_edge.hpp
edges/: edge.hpp  flow_edge.hpp  weighted_edge.hpp  weighted_flow_edge.hpp
format/: format.sh  win.ps1
graph/: graph_traits.hpp
include/: licence_test.hpp
include/gl/: algorithm.hpp  algorithms.hpp  constants.hpp  edge.hpp  edge_descriptor.hpp  edge_tag.hpp  edge_tags.hpp  graph.hpp  graph_file_io.hpp  graph_io.hpp  graph_traits.hpp  graph_utility.hpp  incidence.hpp  io.hpp  topologies.hpp  utility.hpp  vertex.hpp  vertex_descriptor.hpp
include/gl/algorithm/: bfs.hpp  breadth_first_search.hpp  callbacks.hpp  coloring.hpp  constants.hpp  deapth_first_search.hpp  dfs.hpp  dijkstra.hpp  mst.hpp  topological_sort.hpp  types.hpp
include/gl/algorithm/detail/: bfs_impl.hpp  common.hpp  dfs.hpp  dfs_impl.hpp  search_algorithm_util.hpp
include/gl/algorithm/impl/: bfs.hpp  bfs_impl.hpp  common.hpp  dfs.hpp  dfs_impl.hpp  pfs.hpp
include/gl/attributes/: force_inline.hpp
include/gl/decl/: graph_traits.hpp  impl_tags.hpp
include/gl/detail/: concepts.hpp  default_types.hpp  edge_traits.hpp
include/gl/edge/: edge_data.hpp  edge_descriptor.hpp  type_traits.hpp
include/gl/graph/: graph.hpp  graph_traits.hpp  mutable_graph.hpp
include/gl/graph/detail/: abstract_graph_base.hpp
include/gl/impl/: adjacency_list.hpp  adjacency_matrix.hpp  impl_tags.hpp  impl_tags_decl.hpp  implementation_tags.hpp
include/gl/impl/specialized/: adjacency_list.hpp  adjacency_matrix.hpp
include/gl/io/: format.hpp  handlers.hpp  io_handler.hpp  io_handlers.hpp  io_options.hpp  options.hpp  stream_options_manipulator.hpp
include/gl/topology/: binary_tree.hpp  bipartite.hpp  clique.hpp  cycle.hpp  path.hpp
include/gl/type_traits/: implementation_traits.hpp
include/gl/types/: default_types.hpp  dereferencing_iterator.hpp  formatter.hpp  iterator_range.hpp  non_null_iterator.hpp  properties.hpp  type_traits.hpp  types.hpp
include/gl/types/traits/: cache_mode.hpp  concepts.hpp  iterator_traits.hpp  type_extractors.hpp
include/gl/util/: enum.hpp  pow.hpp
include/gl/utility/: container_traits.hpp  type_traits.hpp  types.hpp
include/gl/vertex/: type_traits.hpp  vertex_descriptor.hpp
scripts/: check_licence.py  format.py
scripts/format/: linux.sh
tests/: CMakeLists.txt
tests/app/: main.cpp
tests/data/: bicoloring_bipartite_graph_coloring.txt  bicoloring_directed_bipartite_graph.gsf  bicoloring_directed_not_bipartite_graph.gsf  bicoloring_undirected_bipartite_graph.gsf  bicoloring_undirected_not_bipartite_graph.gsf  dijkstra_directed_distances.txt  dijkstra_directed_graph.gsf  dijkstra_directed_predecessors.txt  dijkstra_undirected_distances.txt  dijkstra_undirected_graph.gsf  dijkstra_undirected_predecessors.txt  mst_edges.txt  mst_graph.gsf  topological_sort_directed_acyclic_graph.gsf  topological_sort_directed_acyclic_order.txt  topological_sort_directed_not_acyclic_graph.gsf
tests/include/: alg_common.hpp  common_constants.hpp  constants.hpp  functional.hpp  io_common.hpp  namespaces.hpp  transforms.hpp  types.hpp  utility.hpp
tests/source/: test_adjacency_list.cpp  test_adjacency_matrix.cpp  test_alg_bfs.cpp  test_alg_coloring.cpp  test_alg_colorring.cpp  test_alg_dfs.cpp  test_alg_dijkstra.cpp  test_alg_mst.cpp  test_alg_topological_sort.cpp  test_algorithm.cpp  test_config.cpp  test_dereferencing_iterator.cpp  test_edge_descriptor.cpp  test_edge_tags.cpp  test_extarnal_libs_config.cpp  test_graph.cpp  test_graph_file_io.cpp  test_graph_incidence.cpp  test_graph_io.cpp  test_graph_topology_builders.cpp  test_incidence.cpp  test_io_handlers.cpp  test_iterator_range.cpp  test_non_null_iterator.cpp  test_properties.cpp  test_search_algorithms.cpp  test_stream_options_manipulator.cpp  test_util.cpp  test_vertex_degree_getters.cpp  test_vertex_descriptor.cpp
utility/: concepts.hpp  type_traits.hpp  types.hpp
vertex/: adjacent_container.hpp  type_traits.hpp  vertex_descriptor.hpp  vertex_traits.hpp
